<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECC7A3"
    tools:context=".ui.main.AlarmActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ABProfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <Toolbar
            android:id="@+id/tbProfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="190dp"
                android:textSize="10pt"
                android:textColor="@color/white"
                android:layout_height="40dp"
                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:text="@string/textAlarm"
                android:fontFamily="@font/ubuntu"
                android:gravity="center"
                android:layout_gravity="center"/>

            <ImageButton
                android:id="@+id/onPressedBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:background="@drawable/ic_back"
                />

        </Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/one_time_alarm"
            android:textSize="16sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/btn_once_date"
                style="@style/Base.Widget.AppCompat.ImageButton"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_date" />
            <TextView
                android:id="@+id/tv_once_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm_date" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/btn_once_time"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_time" />
            <TextView
                android:id="@+id/tv_once_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm_time" />
        </LinearLayout>
        <EditText
            android:id="@+id/edt_once_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/alarm_message"
            android:inputType="text" />
        <Button
            android:id="@+id/btn_set_once_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/set_one_time_alarm" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/repeating_alarm"
            android:textSize="16sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/btn_repeating_time"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_time" />
            <TextView
                android:id="@+id/tv_repeating_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm_time" />
        </LinearLayout>
        <EditText
            android:id="@+id/edt_repeating_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/alarm_message"
            android:inputType="text" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_set_repeating_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_margin="5dp"
                android:text="@string/set_repeating_alarm" />
            <Button
                android:id="@+id/btn_cancel_repeating_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_margin="5dp"
                android:text="@string/cancel_alarm" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>