<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ABBelajar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Toolbar
                android:id="@+id/tb"
                android:layout_width="match_parent"
                android:theme="@style/AppTheme.AppBarOverlay"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/toolbar_title_belajar"
                    android:layout_width="100dp"
                    android:textSize="10pt"
                    android:textColor="@color/white"
                    android:layout_height="40dp"
                    android:gravity="center"
                    style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                    android:text="@string/BelajarActivity"
                    android:fontFamily="@font/ubuntu"
                    android:layout_gravity="center"/>

                <ImageButton
                    android:id="@+id/onPressedBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_back"
                    />

            </Toolbar>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/materi_sejarah_pramuka" />
    <Button
        android:id="@+id/btn_sejarahPramuka"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/to_sejarah" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/materi_morse_pramuka" />
    <Button
        android:id="@+id/btn_sandiPramuka"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/to_sejarah" />
</LinearLayout>