<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:id="@+id/frameLayout"
    tools:context=".ui.fragment.SettingFragment">

    <ScrollView
        android:id="@+id/ScrollDashboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:id="@+id/activity_profil"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#ECC7A3">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/ABProfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Toolbar
                    android:id="@+id/tbProfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/toolbar_title"
                        android:layout_width="wrap_content"
                        android:textSize="10pt"
                        android:textColor="@color/white"
                        android:layout_height="40dp"
                        android:gravity="center"
                        style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                        android:text="@string/SettingActivity"
                        android:fontFamily="@font/ubuntu"
                        android:layout_gravity="center"/>

                </Toolbar>

            </com.google.android.material.appbar.AppBarLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_menu"
                android:orientation="vertical"
                android:padding="16dp"
                tools:ignore="ObsoleteLayoutParam">

                <LinearLayout
                    android:id="@+id/setting_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:context=".ProfilFragment">


                    <ImageButton
                        android:id="@+id/setting_profil"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/ic_action_setting" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayoutSetting"
                    android:layout_width="match_parent"
                    android:layout_height="410dp"
                    android:background="@drawable/bg_menusetting"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/LinearLayoutProfil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp_30"
                        android:layout_marginTop="@dimen/dp_30"
                        android:background="@drawable/bg_profil"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_person_black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ubuntu"
                            android:text="@string/textProfil"
                            android:textSize="25sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/LinearLayoutAlarm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp_30"
                        android:layout_marginTop="@dimen/dp_30"
                        android:background="@drawable/bg_profil"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_plus_time" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ubuntu"
                            android:text="@string/textAlarm"
                            android:textSize="25sp" />

                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>