<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_gravity="center"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:elevation="8dp"
        app:cardMaxElevation="8dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:strokeColor="@color/coklat"
        app:strokeWidth="2dp"
        android:layout_marginVertical="8dp"
        tools:ignore="UnusedAttribute">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="4dp">

            <TextView
                android:id="@+id/hurufId"
                android:layout_width="120dp"
                android:layout_height="150dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:text="A"
                android:fontFamily="@font/ubuntu"
                android:textSize="90dp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/deskripsiHuruf"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/hurufId"
                app:layout_constraintTop_toTopOf="@+id/hurufId" />

            <TextView
                android:id="@+id/sandiId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:text=".-"
                android:textSize="50sp"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@+id/line_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/hurufId"
                app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

            <LinearLayout
                android:gravity="center"
                android:id="@+id/line_button"
                app:layout_constraintTop_toBottomOf="@id/sandiId"
                app:layout_constraintStart_toEndOf="@+id/hurufId"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:id="@+id/btn_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/play"
                    android:fontFamily="@font/ubuntu"
                    android:drawableLeft="@drawable/ic_play"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/hurufId"
                    tools:ignore="RtlHardcoded" />

                <Button
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/btn_stop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/stop"
                    android:fontFamily="@font/ubuntu"
                    android:drawableLeft="@drawable/ic_stop"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/hurufId"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>